# passwordmanager

./: Dockerfile  docker-compose.yml  pyproject.toml  pytest.ini
sql/: vaults.sql
src/passwordmanager/: __main__.py  server.py
src/passwordmanager/cli/: main.py  parser.py
src/passwordmanager/server/: dependencies.py  main.py
src/passwordmanager/server/routers/: vaults.py
src/passwordmanager/server/static/: form.css  vaults.css
src/passwordmanager/server/templates/: index.html  vaults.html
src/passwordmanager/vault/: __init__.py  impl.py  interface.py
src/passwordmanager/vault/impl/: __init__.py  json.py  postgres.py
templates/: index.html  vaults.html
tests/: conftest.py
tests/integration/vault/: test_create_vault.py
tests/integration/vault/postgres/: test_create_vault.py  test_get_all_vaults.py
tests/unit/vault/: test_get_vault.py
