[tool.poetry]
name = "passwordmanager"
version = "0.1.0"
description = "Password Manager Application"
authors = ["Brock Brumley <brockbrumley95@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sanic = {extras = ["ext"], version = "^23.6.0"}
jinja2 = "^3.1.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
mypy = "^1.5.1"
pytest-asyncio = "^0.21.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
